First pass at rescructure

--- a/src/sass/experimental/placeholder.scss
+++ b/src/sass/experimental/placeholder.scss
@@ -10,6 +10,7 @@ This is an EXPERIMENT and is not ready to be included in production!
 */
 
 //This file is for placeholder pieces that have been needed but should be replaced by official modules.
+@import '../base/base';
 
 //VARIABLES
 $container-colors: transparent;//#413552
