--- a/src/sass/experimental/mobilemenu.scss
+++ b/src/sass/experimental/mobilemenu.scss
@@ -8,6 +8,11 @@ _______   _______ ___________ ________  ________ _   _ _____ ___  _
 
 This is an EXPERIMENT and is not ready to be included in production!
 */
+// @import '../base/base';
+// @import '../modules/typography/typography';
+// @import '../modules/navigation/navigation';
+// @import '../modules/actions/actions';
+// @import '../modules/icons/icons';
 
 //This is the mobile menu including sidebar and profile
 
