Show icon code on click

--- a/src/sass/example-page/color.scss
+++ b/src/sass/example-page/color.scss
@@ -28,11 +28,10 @@ $medical-green:           #2EB9AB;
 $ui-gray: #D4D4D4;
 $ui-grey: #D4D4D4;
 
-// $brand-purple: #9F65AE;
-// $brand-light-gray: #EDEDED;
-// $brand-gray: #D4D4D4;
-// $brand-grey: #D4D4D4;
-// $brand-black: #24292C;
+$brand-1: #66416b;
+$brand-2: #ce6b61;
+$brand-3: #628a8f;
+$brand-4: #e19847;
 
 $brand-purple: #72569B;
 $brand-blue: #28336D;
