Add enter animation

--- a/src/sass/experimental/placeholder.scss
+++ b/src/sass/experimental/placeholder.scss
@@ -8,7 +8,7 @@ _______   _______ ___________ ________  ________ _   _ _____ ___  _
 
 This is an EXPERIMENT and is not ready to be included in production!
 */
-// @import '../base/base';
+@import '../base/base';
 
 //This file is for placeholder pieces that have been needed but should be replaced by official modules.
 
