--- a/src/sass/modules/modal/modal.scss
+++ b/src/sass/modules/modal/modal.scss
@@ -1,3 +1,8 @@
+@keyframes openModal {
+  from { transform: translateY(-25%); }
+  to { transform: translateY(0); }
+}
+
 .prevent-scrolling { overflow: hidden; }
 
 .dash-overlay {
@@ -26,6 +31,8 @@
   z-index: 1050;
   cursor: default;
   overflow: hidden;
+
+  animation: openModal 0.3s ease-out;
 
   @media #{$tablet} {
     margin: 5rem auto 5rem auto;
