--- a/src/sass/example-page/image.scss
+++ b/src/sass/example-page/image.scss
@@ -66,7 +66,7 @@
 }
 
 .card--image {
-  width: 100%;
+  width: 100% !important;
   height: auto;
   border-top-left-radius: 5px;
   border-top-right-radius: 5px;
